Require card details when paying, store only the last 4 digits (Closes #119)
